Added localization for Georgian names.

--- a/localization/english/br_names_l_english.yml
+++ b/localization/english/br_names_l_english.yml
@@ -516,4 +516,457 @@
  Varus: "Varus"
  Whelp: "Whelp"
  Wintermilk: "Wintermilk"
- 
+
+ #Georgian names
+ Akaki: "Akaki" 
+ Aleksandre: "Aleksandre" 
+ Andria: "Andria" 
+ Bagrat: "Bagrat" 
+ Besarion: "Besarion" 
+ Davit: "Davit" 
+ Dimitri: "Dimitri"
+ Demetre: "Demetre"
+ Eduard: "Eduard" 
+ Ekvtime: "Ekvtime" 
+ Evgeni: "Evgeni"
+ Erekle: "Erekle"
+ Filipe: "Filipe" 
+ Galaktion: "Galaktion" 
+ Giorgi: "Giorgi" 
+ Germanos: "Germanos" 
+ Givi: "Givi" 
+ Grigol: "Grigol" 
+ Ilia: "Ilia" 
+ Ioseb: "Ioseb" 
+ Irakli: "Irakli" 
+ Ivane: "Ivane" 
+ Jansung: "Jansung" 
+ Jemal: "Jemal" 
+ Kaikhosro: "Kaikhosro" 
+ Konstantine: "Konstantine" 
+ Leo: "Leo" 
+ Levan: "Levan"
+ Luarsab: "Luarsab" 
+ Luka: "Luka" 
+ Meliton: "Meliton" 
+ Mikheil: "Mikheil" 
+ Murman: "Murman" 
+ Nikoloz: "Nikoloz" 
+ Noe: "Noe" 
+ Otar: "Otar" 
+ Polikarpe: "Polikarpe" 
+ Radish: "Radish" 
+ Revaz: "Revaz" 
+ Sargis: "Sargis" 
+ Sergo: "Sergo" 
+ Shalva: "Shalva" 
+ Solomon: "Solomon" 
+ Sulkhan: "Sulkhan" 
+ Teimuraz: "Teimuraz" 
+ Tengiz: "Tengiz" 
+ Vakhtang: "Vakhtang" 
+ Valerian: "Valerian" 
+ Vasil: "Vasil" 
+ Vladimer: "Vladimer" 
+ Zakaria: "Zakaria" 
+ Zurab: "Zurab" 
+ Zviad: "Zviad"
+ Ana: "Ana"
+ Anastasia: "Anastasia"
+ Aneta: "Aneta"
+ Babilina: "Babilina"
+ Darejan: "Darejan"
+ Dominika: "Dominika"
+ Ekaterine: "Ekaterine"
+ Eleonora: "Eleonora"
+ Esma: "Esma"
+ Ketevan: "Ketevan"
+ Mariam: "Mariam"
+ Nino: "Nino"
+ Olga: "Olga"
+ Rusudan: "Rusudan"
+ Tekle: "Tekle"
+ Vera: "Vera"
+
+ #Georgian last names
+ Abashidze: "Abashidze"
+ Agiashvili: "Agiashvili"
+ Akhvlediani: "Akhvlediani"
+ Amilakhvari: "Amilakhvari"
+ Amirejibi: "Amirejibi"
+ Anchabadze: "Anchabadze"
+ Apakidze: "Apakidze"
+ Arghutashvili: "Arghutashvili"
+ Asatiani: "Asatiani"
+ Avalishvili: "Avalishvili"
+ Babadishvili: "Babadishvili"
+ Bagrationi: "Bagrationi"
+ Bagration-Mukhraneli: "Bagration-Mukhraneli"
+ Baratashvili: "Baratashvili"
+ Begtabegishvili: "Begtabegishvili"
+ Chavchavadze: "Chavchavadze"
+ Cherkezishvili: "Cherkezishvili"
+ Chichua: "Chichua"
+ Chikovani: "Chikovani"
+ Chizhavadze: "Chizhavadze"
+ Chkheidze: "Chkheidze"
+ Choloqashvili: "Choloqashvili"
+ Dadeshkeliani: "Dadeshkeliani"
+ Dadiani: "Dadiani"
+ Dgebuadze: "Dgebuadze"
+ Diasamidze: "Diasamidze"
+ Endronikashvili: "Endronikashvili"
+ Eristavi: "Eristavi"
+ Gardapkhadze: "Gardapkhadze"
+ Gelovani: "Gelovani"
+ Gugunava: "Gugunava"
+ Guramishvili: "Guramishvili"
+ Gurgenidze: "Gurgenidze"
+ Gurieli: "Gurieli"
+ Iashvili: "Iashvili"
+ Jaiani: "Jaiani"
+ Jambakur-Orbeliani: "Jambakur-Orbeliani"
+ Jandieri: "Jandieri"
+ Japaridze: "Japaridze"
+ Javakhishvili: "Javakhishvili"
+ Jorjadze: "Jorjadze"
+ Kherkheulidze: "Kherkheulidze"
+ Khidirbegishvili: "Khidirbegishvili"
+ Khimshiashvili: "Khimshiashvili"
+ Kochakidze: "Kochakidze"
+ Lionidze: "Lionidze"
+ Lortkipanidze: "Lortkipanidze"
+ Machabeli: "Machabeli"
+ Maksimenishvili: "Maksimenishvili"
+ Maqashvili: "Maqashvili"
+ Matchutadze: "Matchutadze"
+ Melikishvili: "Melikishvili"
+ Mikadze: "Mikadze"
+ Mikeladze: "Mikeladze"
+ Mkheidze: "Mkheidze"
+ Nakashidze: "Nakashidze"
+ Nizharadze: "Nizharadze"
+ Paghava: "Paghava"
+ Palavandishvili: "Palavandishvili"
+ Pavlenishvili: "Pavlenishvili"
+ Qaralashvili: "Qaralashvili"
+ Qipiani: "Qipiani"
+ Robitashvili: "Robitashvili"
+ Rusishvili: "Rusishvili"
+ Saginashvili: "Saginashvili"
+ Shelia: "Shelia"
+ Solaghashvili: "Solaghashvili"
+ Sumbatashvili: "Sumbatashvili"
+ Tarkhan-Mouravi: "Tarkhan-Mouravi"
+ Tavdgiridze: "Tavdgiridze"
+ Tsereteli: "Tsereteli"
+ Tsitsishvili: "Tsitsishvili"
+ Tsulukidze: "Tsulukidze"
+ Tumanishvili: "Tumanishvili"
+ Tusishvili: "Tusishvili"
+ Vachnadze: "Vachnadze"
+ Vakhvakhishvili: "Vakhvakhishvili"
+ Abazadze: "Abazadze"
+ Abelashvili: "Abelashvili"
+ Abuladze: "Abuladze"
+ Adamia: "Adamia"
+ Alavidze: "Alavidze"
+ Aleksidze: "Aleksidze"
+ Aleksishvili: "Aleksishvili"
+ Alibegashvili: "Alibegashvili"
+ Aliqulashvili: "Aliqulashvili"
+ Alkhazishvili: "Alkhazishvili"
+ Alshibaia: "Alshibaia"
+ Amaghlobeli: "Amaghlobeli"
+ Amashukeli: "Amashukeli"
+ Amiranashvili: "Amiranashvili"
+ Ananiashvili: "Ananiashvili"
+ Anjaparidze: "Anjaparidze"
+ Antadze: "Antadze"
+ Antelava: "Antelava"
+ Ardishvili: "Ardishvili"
+ Areshidze: "Areshidze"
+ Areshishvili: "Areshishvili"
+ Arjevanidze: "Arjevanidze"
+ Aslamazishvili: "Aslamazishvili"
+ Avaliani: "Avaliani"
+ Avtandilishvili: "Avtandilishvili"
+ Badriashvili: "Badriashvili"
+ Bagratishvili: "Bagratishvili"
+ Bakhutashvili: "Bakhutashvili"
+ Bakradze: "Bakradze"
+ Bantsuri: "Bantsuri"
+ Basilashvili: "Basilashvili"
+ Batiashvili: "Batiashvili"
+ Bazhbeuk-Melikov: "Bazhbeuk-Melikov"
+ Berdzeni: "Berdzeni"
+ Beridze: "Beridze"
+ Bezhanishvili: "Bezhanishvili"
+ Bezhuashvili: "Bezhuashvili"
+ Bolkvadze: "Bolkvadze"
+ Botchoridze: "Botchoridze"
+ Burdiashvili: "Burdiashvili"
+ Butchqiashvili: "Butchqiashvili"
+ Charekishvili: "Charekishvili"
+ Chikoidze: "Chikoidze"
+ Chikvadze: "Chikvadze"
+ Chikviladze: "Chikviladze"
+ Chinchaladze: "Chinchaladze"
+ Chivadze: "Chivadze"
+ Chkhartishvili: "Chkhartishvili"
+ Chkhikvishvili: "Chkhikvishvili"
+ Chrdileli: "Chrdileli"
+ Chubinashvili: "Chubinashvili"
+ Dalakishvili: "Dalakishvili"
+ Darakhvelidze: "Darakhvelidze"
+ Dashniani: "Dashniani"
+ Datuashvili: "Datuashvili"
+ Davitashvili: "Davitashvili"
+ Dedenashvili: "Dedenashvili"
+ Dekanozishvili: "Dekanozishvili"
+ Devdariani: "Devdariani"
+ Didebulidze: "Didebulidze"
+ Didia: "Didia"
+ Duchidze: "Duchidze"
+ Duduchava: "Duduchava"
+ Dumbadze: "Dumbadze"
+ Dvalishvili: "Dvalishvili"
+ Dzidziguri: "Dzidziguri"
+ Ebralidze: "Ebralidze"
+ Egadze: "Egadze"
+ Eliashvili: "Eliashvili"
+ Eliozishvili: "Eliozishvili"
+ Ergemlidze: "Ergemlidze"
+ Gabashvili: "Gabashvili"
+ Gabunia: "Gabunia"
+ Gagua: "Gagua"
+ Gamqrelidze: "Gamqrelidze"
+ Gamsakhurdia: "Gamsakhurdia"
+ Gamtsemlidze: "Gamtsemlidze"
+ Garaqanidze: "Garaqanidze"
+ Garsevanishvili: "Garsevanishvili"
+ Gasviani: "Gasviani"
+ Gatserelia: "Gatserelia"
+ Gedevanishvili: "Gedevanishvili"
+ Gegelashvili: "Gegelashvili"
+ Gegelia: "Gegelia"
+ Gegenava: "Gegenava"
+ Gegetchkori: "Gegetchkori"
+ Ghlonti: "Ghlonti"
+ Ghoghoberidze: "Ghoghoberidze"
+ Ghvinepadze: "Ghvinepadze"
+ Gigiberia: "Gigiberia"
+ Gigineishvili: "Gigineishvili"
+ Giorgobiani: "Giorgobiani"
+ Gizhimqreli: "Gizhimqreli"
+ Godabrelidze: "Godabrelidze"
+ Gogiberidze: "Gogiberidze"
+ Gogijanashvili: "Gogijanashvili"
+ Gogitidze: "Gogitidze"
+ Gogodze: "Gogodze"
+ Gogolashvili: "Gogolashvili"
+ Goguashvili: "Goguashvili"
+ Goshua: "Goshua"
+ Gotsiridze: "Gotsiridze"
+ Gotua: "Gotua"
+ Grigolashvili: "Grigolashvili"
+ Grigolia: "Grigolia"
+ Gugushvili: "Gugushvili"
+ Guntsadze: "Guntsadze"
+ Guralia: "Guralia"
+ Gvajava: "Gvajava"
+ Gvalia: "Gvalia"
+ Gvamberia: "Gvamberia"
+ Gvatua: "Gvatua"
+ Gvelesiani: "Gvelesiani"
+ Gverdtsiteli: "Gverdtsiteli"
+ Ioramishvili: "Ioramishvili"
+ Iorashvili: "Iorashvili"
+ Ioseliani: "Ioseliani"
+ Ishkhneli: "Ishkhneli"
+ Jabadari: "Jabadari"
+ Jajanashvili: "Jajanashvili"
+ Jaqeli: "Jaqeli"
+ Javakhia: "Javakhia"
+ Javrishvili: "Javrishvili"
+ Jolia: "Jolia"
+ Jorjikia: "Jorjikia"
+ Kadagishvili: "Kadagishvili"
+ Kajaia: "Kajaia"
+ Kakhidze: "Kakhidze"
+ Kalatozishvili: "Kalatozishvili"
+ Kandelaki: "Kandelaki"
+ Kargareteli: "Kargareteli"
+ Karsidze: "Karsidze"
+ Kartvelishvili: "Kartvelishvili"
+ Karumidze: "Karumidze"
+ Kavtaradze: "Kavtaradze"
+ Keidia: "Keidia"
+ Kelbakiani: "Kelbakiani"
+ Ketskhoveli: "Ketskhoveli"
+ Kezeli: "Kezeli"
+ Kezheradze: "Kezheradze"
+ Khetsuriani: "Khetsuriani"
+ Khirselashvili: "Khirselashvili"
+ Khmaladze: "Khmaladze"
+ Khomasuridze: "Khomasuridze"
+ Khutsishvili: "Khutsishvili"
+ Khvadadze: "Khvadadze"
+ Kikiani: "Kikiani"
+ Kiknadze: "Kiknadze"
+ Kiziria: "Kiziria"
+ Kldiashvili: "Kldiashvili"
+ Klimiashvili: "Klimiashvili"
+ Kobakhidze: "Kobakhidze"
+ Kobiashvili: "Kobiashvili"
+ Kodalashvili: "Kodalashvili"
+ Komakhidze: "Komakhidze"
+ Kopadze: "Kopadze"
+ Kordzaia: "Kordzaia"
+ Korinteli: "Korinteli"
+ Korkia: "Korkia"
+ Kortua: "Kortua"
+ Kotetishvili: "Kotetishvili"
+ Krotchi: "Krotchi"
+ Kuchuloria: "Kuchuloria"
+ Kumsishvili: "Kumsishvili"
+ Kuprashvili: "Kuprashvili"
+ Kurdiani: "Kurdiani"
+ Kurtskhalia: "Kurtskhalia"
+ Kutateladze: "Kutateladze"
+ Kutchukhidze: "Kutchukhidze"
+ Kvaliashvili: "Kvaliashvili"
+ Kvantchakhidze: "Kvantchakhidze"
+ Kvariani: "Kvariani"
+ Kvashali: "Kvashali"
+ Kvinikhidze: "Kvinikhidze"
+ Laghidze: "Laghidze"
+ Lashkhi: "Lashkhi"
+ Laskhishvili: "Laskhishvili"
+ Lezhava: "Lezhava"
+ Liparishvili: "Liparishvili"
+ Liponavi: "Liponavi"
+ Loladze: "Loladze"
+ Lolua: "Lolua"
+ Lomidze: "Lomidze"
+ Lominadze: "Lominadze"
+ Maghalashvili: "Maghalashvili"
+ Maghradze: "Maghradze"
+ Makharadze: "Makharadze"
+ Makhateli: "Makhateli"
+ Makhviladze: "Makhviladze"
+ Mamardashvili: "Mamardashvili"
+ Mamatsashvili: "Mamatsashvili"
+ Mamuchashvili: "Mamuchashvili"
+ Mandaria: "Mandaria"
+ Margvelashvili: "Margvelashvili"
+ Marjanishvili: "Marjanishvili"
+ Markozishvili: "Markozishvili"
+ Maskhulia: "Maskhulia"
+ Matchavariani: "Matchavariani"
+ Mdivani: "Mdivani"
+ Medzmariashvili: "Medzmariashvili"
+ Meghvinetukhutsesi: "Meghvinetukhutsesi"
+ Meipariani: "Meipariani"
+ Meskhi: "Meskhi"
+ Meskhishvili: "Meskhishvili"
+ Meunargia: "Meunargia"
+ Mgaloblishvili: "Mgaloblishvili"
+ Mgeladze: "Mgeladze"
+ Mikelashvili: "Mikelashvili"
+ Mirzashvili: "Mirzashvili"
+ Momtsemlidze: "Momtsemlidze"
+ Mortuladze: "Mortuladze"
+ Mosidze: "Mosidze"
+ Murvanishvili: "Murvanishvili"
+ Muskhelishvili: "Muskhelishvili"
+ Nagladze: "Nagladze"
+ Namoradze: "Namoradze"
+ Naneishvili: "Naneishvili"
+ Nasidze: "Nasidze"
+ Natchqepia: "Natchqepia"
+ Natishvili: "Natishvili"
+ Natsvlishvili: "Natsvlishvili"
+ Nemsadze: "Nemsadze"
+ Nikolaishvili: "Nikolaishvili"
+ Niniashvili: "Niniashvili"
+ Nishnianidze: "Nishnianidze"
+ Norakidze: "Norakidze"
+ Onikashvili: "Onikashvili"
+ Orjonikidze: "Orjonikidze"
+ Orzolia: "Orzolia"
+ Ositashvili: "Ositashvili"
+ Paitchadze: "Paitchadze"
+ Papuashvili: "Papuashvili"
+ Patsatsia: "Patsatsia"
+ Petriashvili: "Petriashvili"
+ Pichkhaia: "Pichkhaia"
+ Pisadze: "Pisadze"
+ Pitskhelauri: "Pitskhelauri"
+ Pularia: "Pularia"
+ Purtseladze: "Purtseladze"
+ Qancheli: "Qancheli"
+ Qazbegi: "Qazbegi"
+ Qenia: "Qenia"
+ Qiasashvili: "Qiasashvili"
+ Qorghanashvili: "Qorghanashvili"
+ Qurashvili: "Qurashvili"
+ Ramishvili: "Ramishvili"
+ Ratiani: "Ratiani"
+ Rcheulishvili: "Rcheulishvili"
+ Revia: "Revia"
+ Rtskhiladze: "Rtskhiladze"
+ Saakadze: "Saakadze"
+ Sajaia: "Sajaia"
+ Salaqaia: "Salaqaia"
+ Samarghanishvili: "Samarghanishvili"
+ Sanikidze: "Sanikidze"
+ Saqvarelidze: "Saqvarelidze"
+ Savaneli: "Savaneli"
+ Shaburishvili: "Shaburishvili"
+ Sharashenidze: "Sharashenidze"
+ Sharashidze: "Sharashidze"
+ Shatberdashvili: "Shatberdashvili"
+ Shaverdashvili: "Shaverdashvili"
+ Shevardnadze: "Shevardnadze"
+ Shotadze: "Shotadze"
+ Skhirtladze: "Skhirtladze"
+ Sreseli: "Sreseli"
+ Sulkhanishvili: "Sulkhanishvili"
+ Svanidze: "Svanidze"
+ Svimonishvili: "Svimonishvili"
+ Taqaishvili: "Taqaishvili"
+ Tatishvili: "Tatishvili"
+ Tavartkiladze: "Tavartkiladze"
+ Tavqelishvili: "Tavqelishvili"
+ Tavzarashvili: "Tavzarashvili"
+ Tchatchiashvili: "Tchatchiashvili"
+ Tchiladze: "Tchiladze"
+ Tchitchinadze: "Tchitchinadze"
+ Tchqonia: "Tchqonia"
+ Tchumburidze: "Tchumburidze"
+ Tikanadze: "Tikanadze"
+ Topuria: "Topuria"
+ Tsimakuridze: "Tsimakuridze"
+ Tsinamdzghvrishvili: "Tsinamdzghvrishvili"
+ Tsitelishvili: "Tsitelishvili"
+ Tskitishvili: "Tskitishvili"
+ Tukhareli: "Tukhareli"
+ Tulashvili: "Tulashvili"
+ Turkistanishvili: "Turkistanishvili"
+ Tuskia: "Tuskia"
+ Tvaltvadze: "Tvaltvadze"
+ Ugrekhelidze: "Ugrekhelidze"
+ Ujmajuridze: "Ujmajuridze"
+ Utnelishvili: "Utnelishvili"
+ Uznadze: "Uznadze"
+ Zaalishvili: "Zaalishvili"
+ Zaldastanishvili: "Zaldastanishvili"
+ Zandukeli: "Zandukeli"
+ Zavarashvili: "Zavarashvili"
+ Zedginidze: "Zedginidze"
+ Zhghenti: "Zhghenti"
+ Zhordania: "Zhordania"
+ Zhuruli: "Zhuruli"
+ Zhvania: "Zhvania"
+ Zvambaia: "Zvambaia"
