Changed commenting in localization for names.

--- a/localization/english/br_names_l_english.yml
+++ b/localization/english/br_names_l_english.yml
@@ -517,7 +517,8 @@
  Whelp: "Whelp"
  Wintermilk: "Wintermilk"
 
- #Georgian names
+#Georgian
+ # first names
  Akaki: "Akaki" 
  Aleksandre: "Aleksandre" 
  Andria: "Andria" 
@@ -588,7 +589,7 @@
  Tekle: "Tekle"
  Vera: "Vera"
 
- #Georgian last names
+ # last names
  Abashidze: "Abashidze"
  Agiashvili: "Agiashvili"
  Akhvlediani: "Akhvlediani"
