fixed ERE naming decisions
-fixed ERE naming decisions not changing the name because the dyn name priority was to low
-fixed the event disappearing after selecting them because old var's were not being removed properly
-added a new decision to change the name back to default

--- a/localization/english/br_countries_l_english.yml
+++ b/localization/english/br_countries_l_english.yml
@@ -242,6 +242,7 @@
  dyn_c_eng_georgia: "Georgia"
  dyn_c_eng_georgia_adj: "Georgian"
 
+ ere_default_name_tt: "Name of our country will be changed to the default name." #Can be any of the default names
  ere_re_name_tt: "Name of our country will be changed to 'Roman Empire'"
  ere_ere_name_tt: "Name of our country will be changed to 'Eastern Roman Empire'"
  ere_romania_name_tt: "Name of our country will be changed to 'Romanía'"
