--- a/localization/english/br_decisions_l_english.yml
+++ b/localization/english/br_decisions_l_english.yml
@@ -118,6 +118,9 @@
  br_show_ere_name_decisions_desc: "Show Name Decisions. Once you select an new name option it takes a moment once unpaused to show the new name."
  br_hide_ere_name_decisions: "Hide Name Decisions"
  br_hide_ere_name_decisions_desc: "Hide Name Decisions. Once you select an new name option it takes a moment once unpaused to show the new name."
+ ere_default_name_decision: "Change back to our default name"
+ ere_default_name_decision_desc: "We will change back to our default name."
+ ere_default_name_decision_custom_tooltip: "We should use our default name."
  ere_re_name_decision: "Latinize Name: Roman Empire"
  ere_re_name_decision_desc: "Latinize our name to 'Roman Empire'"
  ere_re_name_decision_custom_tooltip: "We should use our Latin name 'Roman Empire'."
