--- a/localization/english/br_hre_revolution_l_english.yml
+++ b/localization/english/br_hre_revolution_l_english.yml
@@ -13,7 +13,8 @@
  br_hre_impending_revolution_3de_estate_progress_bar_desc: "Third estate disatisfaction"
 
  br_impending_revolution_to_many_redicals_loc: "more than #variable [GetPlayer.MakeScope.ScriptValue('br_impending_revolution_radicals_threshold_percentage')]%#! of the population are radicals."
- br_impending_revolution_to_many_loyalists_loc: "more than #variable [GetPlayer.MakeScope.ScriptValue('br_impending_revolution_radicals_threshold_percentage')]%#! of the population are radicals."
+ br_impending_revolution_to_many_loyalists_loc: "more than #variable [GetPlayer.MakeScope.ScriptValue('br_impending_revolution_loyalist_threshold_percentage')]%#! of the population are loyalists."
+ br_impending_revolution_monarchy_popularity_revolution_progress_change_loc: "from the current Monarchy popularity."
 
  ##Script value breakdowns
  grefm_value_from_voting: "From enacting #yellow Voting Rights#!"
