updated food insecurity event loc
-updated food insecurity event loc, event image and icon
-added event ideas to the todo file

--- a/localization/english/br_hre_revolution_l_english.yml
+++ b/localization/english/br_hre_revolution_l_english.yml
@@ -53,8 +53,8 @@
  ##Events
  br_hre_medium_increase_in_revolution_progress_tt: "A medium increase in progress towards the revolution."
  hre_revolution_events.5.t: "Food insecurity"
- hre_revolution_events.5.d: "Food insecurity"
- hre_revolution_events.5.f: "Food insecurity"
+ hre_revolution_events.5.d: "There is currently a lot of Food insecurity amongst our population. This is increasing the unrest amongst the population."
+ hre_revolution_events.5.f: "The tanner looked around all around his village, the faces of all the people that passed by him looked emaciated. How long would this travesty continue, if they don’t get more food soon the entire village will starve to death, does the Emperor not care at all about his subjects. The nobles they all get to live in luxury waisting food on their pointless parties, while they are starving in the mud. DO THEY NOT CARE AT ALL."
  hre_revolution_events.5.a: "This isn't good"
  #Revolution erupts events
  hre_revolution_events.201.t: "March on the Royal Residence"
