Make Armenia Great Again
Added a few more pops to Armenia and Georgia
- added three new decisions each with an associated event that are about moving your Capital to Karin, back to Ani or to Yerevan

--- a/localization/english/br_decisions_l_english.yml
+++ b/localization/english/br_decisions_l_english.yml
@@ -157,6 +157,13 @@
  br_louisiane_annex_atlantis_desc: "AI Start Scripted War"
  br_dutch_indies_annex_giamaica: "AI Start Scripted War"
  br_dutch_indies_annex_giamaica_desc: "AI Start Scripted War"
- 
 
+ #Armenia
+ br_armenia_move_capital_to_karin: "Move the Capital to Karin"
+ br_armenia_move_capital_to_karin_desc: "For centuries, Ani has stood as the heart of the Armenian nation—a city of a thousand churches and immeasurable pride. Yet as the tides of politics shift and borders grow perilous, the once-great capital now lies too close to danger. In the highlands of Karin, nestled against ancient trade routes and Roman stone, we see the promise of renewed greatness. Let us raise a new capital—not merely a seat of rule, but a beacon of Armenian endurance."
+ br_armenia_move_capital_to_ani: "Return the Capital to Ani"
+ br_armenia_move_capital_to_ani_desc: "The call of Ani has never faded. Though war and exile forced our court from its ancient throne, the spirit of the city endured in every church bell and pilgrim’s prayer. Now, with the realm more secure and our enemies held at bay, the time has come to return. Let Ani rise once more, not in ruin, but reborn—as the capital of our people and the sanctuary of our soul."
+ br_armenia_move_capital_to_yerevan: "Establish the Capital at Yerevan"
+ br_armenia_move_capital_to_yerevan_desc: "In the shadow of Mount Ararat lies Yerevan, an ancient fortress city with roots older than memory. Long overlooked in favor of Ani’s grandeur or Karin’s stone ramparts, Yerevan now stands at the crossroads of trade, culture, and modern administration. As our vision for the nation grows ever more ambitious, so too must our seat of governance reflect this forward march. Let us raise Yerevan from a frontier stronghold to the beating heart of the nation—a new capital for a new century."
+ 
 
