--- a/localization/english/br_events_l_english.yml
+++ b/localization/english/br_events_l_english.yml
@@ -530,4 +530,23 @@
  br_india_kerfuffle.2.a: "We were granted Mughals favor; let us honor that legacy."
  br_india_kerfuffle.2.b: "We live beside them, trade beside them — we may yet rise beside them."
  br_india_kerfuffle.2.c: "Let them fight. We guard the harbors and the ledgers."
+
+ #Armenia decisions
+ # Karin Capital Move Event
+ br_armenia_capital.1.t: "A New Capital in the Highlands"
+ br_armenia_capital.1.d: "The walls of Ani have borne the glories and tragedies of the Armenian people, but now they stand too close to danger. The Turks and Persians presses near, and whispers of conflict grow louder with each passing season. In the ancient fortress-city of Karin, nestled in the highlands where East meets West, many see the promise of renewal—strategic, defensible, and steeped in heritage.\n\nCourt advisors urge the relocation of our capital to this venerable city. Some call for its renaming, to reflect the dawn of a new Armenian era. The old guard balks at such upheaval, but others say this is a chance to shape history.\n\nShall we turn our gaze toward Karin, and write a new chapter for our people?"
+ br_armenia_capital.1.a: "Let us found our future in Karin."
+ br_armenia_capital.1.b: "No—Ani still stands strong."
+
+ # Ani Capital Restoration Event
+ br_armenia_capital.2.t: "A Homecoming to Ani"
+ br_armenia_capital.2.d: "Once called the “City of a Thousand Churches,” Ani was the heart of a mighty realm. War and necessity forced the court to flee, but now—stabilized and emboldened—the cry rises: “Back to Ani!”\n\nReligious leaders speak of divine providence. Scholars speak of heritage. Yet others warn that this move could stir unrest in Karin, which has grown proud in its newfound prominence. The return to Ani would be more than symbolic—it would be a statement of purpose, a return to the soul of Armenia.\n\nShall we heed the call?"
+ br_armenia_capital.2.a: "Let Ani rise again."
+ br_armenia_capital.2.b: "The past must remain the past."
+
+ # Yerevan Capital Move Event
+ br_armenia_capital.3.t: "Toward the City Beneath Ararat"
+ br_armenia_capital.3.d: "Beyond the ruins and relics of older capitals lies Yerevan—a city of ancient roots but youthful promise. Nestled in the Ararat plain, it is a gateway to commerce, culture, and the borderlands. Reformists and merchants alike call for the court to move there, envisioning a forward-facing capital unburdened by old wars and walls.\n\nStill, such a move would break with centuries of tradition. The clergy murmurs uneasily. Yet the mountain watches, eternal and silent.\n\nShall we let Yerevan rise as the beacon of a new age?"
+ br_armenia_capital.3.a: "Let Ararat watch over our capital."
+ br_armenia_capital.3.b: "The city is not yet ready."
  
