New modifiers for ARM/ GEO
- New themed Military modifier to replace the generic thema one.
- Also gave Pronoia modifier

--- a/localization/english/br_modifiers_l_english.yml
+++ b/localization/english/br_modifiers_l_english.yml
@@ -169,6 +169,10 @@
  br_modifier_japan_pacific_trade: "Pacific Trade Dominance"
  br_modifier_porcelain_modifier: "Productive Porcelain Industry"
 
+ #ARM/GEO
+ br_modifier_caucasus_defender: "Defender of the Caucasus"
+ br_modifier_highland_fortress: "Fortress of the Highlands"
+
  #Religion
  br_modifier_tithe: "Papal Tithe"
  br_modifier_ecumenical_patriarch: "Ecumenical Patriarch"
