decisions refactored, fixed and additions.
- refactored, fixed and additional decisions for Afrika and Aegypt

--- a/localization/english/br_decisions_l_english.yml
+++ b/localization/english/br_decisions_l_english.yml
@@ -2,10 +2,15 @@
 
  #romaioi decisions 
 
- end_latin_privileges: "End Latin Trade Privileges"
- end_latin_privileges_desc: "The Latins have enjoyed an unfair monopoly on our trade for too long."
- end_latin_privileges_ELY: "End Latin Trade Privileges"
- end_latin_privileges_ELY_desc: "The Latins have enjoyed an unfair monopoly on our trade for too long."
+ end_latin_privileges: "Revoke Latin Trade Privileges"
+ end_latin_privileges_desc: "For generations, Latin merchants have dominated our ports, enriching themselves at our expense. It is time to restore control of our commerce to the sons of the Rōmaíōn and end this foreign monopoly."
+ end_latin_privileges_ELY: "Revoke Latin Trade Privileges"
+ end_latin_privileges_ELY_desc: "For generations, Latin merchants have dominated our ports, enriching themselves at our expense. It is time to restore control of our commerce to the sons of the Elysia and end this foreign monopoly."
+ end_latin_privileges_AGY: "Revoke Latin Trade Privileges"
+ end_latin_privileges_AGY_desc: "For generations, Latin merchants have dominated our ports, enriching themselves at our expense. It is time to restore control of our commerce to the sons of the Aegypt and end this foreign monopoly."
+ end_latin_privileges_AFK: "Revoke Latin Trade Privileges"
+ end_latin_privileges_AFK_desc: "For generations, Latin merchants have dominated our ports, enriching themselves at our expense. It is time to restore control of our commerce to the sons of the Afrika and end this foreign monopoly."
+ 
  fight_corruption: "Fight Systemic Corruption"
  fight_corruption_desc: "Fighting the corruption that runs rampant in all levels of government won't be easy many entrenched elites benefit from the status quo and may revolt."
 
