added a new event
-added a new event
-updated increase revolution progress effect

--- a/localization/english/br_hre_revolution_l_english.yml
+++ b/localization/english/br_hre_revolution_l_english.yml
@@ -16,6 +16,13 @@
  br_impending_revolution_to_many_loyalists_loc: "more than #variable [GetPlayer.MakeScope.ScriptValue('br_impending_revolution_loyalist_threshold_percentage')]%#! of the population are loyalists."
  br_impending_revolution_monarchy_popularity_revolution_progress_change_loc: "from the current Monarchy popularity."
 
+ ##Change in progress tt
+ br_basic_revolution_progress_increases_loc: "Our progress towards revolution has increased with a"
+ br_hre_small_increase_in_revolution_progress_tt: "$br_basic_revolution_progress_increases_loc$ small amount: [GetPlayer.MakeScope.ScriptValue('br_small_increase_in_revolutulionary_tension_value')|+=]."
+ br_hre_medium_increase_in_revolution_progress_tt: "$br_basic_revolution_progress_increases_loc$ medium amount: [GetPlayer.MakeScope.ScriptValue('br_medium_increase_in_revolutulionary_tension_value')|+=]."
+ br_hre_large_increase_in_revolution_progress_tt: "$br_basic_revolution_progress_increases_loc$ large amount: [GetPlayer.MakeScope.ScriptValue('br_large_increase_in_revolutulionary_tension_value')|+=]."
+ br_hre_unspecified_increase_in_revolution_progress_tt: "$br_basic_revolution_progress_increases_loc$ unspecified amount."
+
  ##Script value breakdowns
  grefm_value_from_voting: "From enacting #yellow Voting Rights#!"
  grefm_value_from_completed_legacies: "From completed #bold Ottoman Legacy#! [Concept('concept_journal_entry', '$concept_journal_entries$')]"
@@ -51,7 +58,6 @@
 
 
  ##Events
- br_hre_medium_increase_in_revolution_progress_tt: "A medium increase in progress towards the revolution."
  hre_revolution_events.5.t: "Food insecurity"
  hre_revolution_events.5.d: "There is currently a lot of Food insecurity amongst our population. This is increasing the unrest amongst the population."
  hre_revolution_events.5.f: "The tanner looked around all around his village, the faces of all the people that passed by him looked emaciated. How long would this travesty continue, if they don’t get more food soon the entire village will starve to death, does the Emperor not care at all about his subjects. The nobles they all get to live in luxury waisting food on their pointless parties, while they are starving in the mud. DO THEY NOT CARE AT ALL."
