--- a/localization/english/br_decisions_l_english.yml
+++ b/localization/english/br_decisions_l_english.yml
@@ -12,7 +12,7 @@
  end_latin_privileges_AFK_desc: "For generations, Latin merchants have dominated our ports, enriching themselves at our expense. It is time to restore control of our commerce to the sons of the Afrika and end this foreign monopoly."
  
  fight_corruption: "Fight Systemic Corruption"
- fight_corruption_desc: "Fighting the corruption that runs rampant in all levels of government won't be easy many entrenched elites benefit from the status quo and may revolt."
+ fight_corruption_desc: "Systemic corruption has weakened the very foundations of our state. Dismantling the networks of patronage and graft will incur the wrath of entrenched elites, but the integrity of our rule demands no less."
 
  romaioi_themata_decision: "Themata Primacy"
  romaioi_themata_decision_desc: "Themata are the main regional military divisions of the Basileía Romaíon, established during the 9th century CE. The Basileía Romaíon is divided into many themata, each with its own governor, military commander and garrison. The main purpose of themata is to provide a means of defense against the empire's enemies. Each thema is responsible for the defense of a specific geographic area and has its own army. The soldiers are mainly local men, who are conscripted and trained for military service. The themata system allows the Basileía Romaíon to have a more flexible military structure, which can adapt to the changing threats and challenges it faces."
@@ -34,27 +34,28 @@
  notbyz_tagmata_decision: "Tagmata Primacy"
  notbyz_tagmata_decision_desc: "Tagmata are the elite military units of the Basileía Romaíon. They are organized into regiments, each with its own specialized role and equipment. The most prominent and powerful tagmata are the Scholai, the Excubitors, and the Vigla. The Scholai are the imperial guard, responsible for protecting the Basileus and his family. The Excubitors are a heavy infantry unit, while the Vigla are a cavalry unit. The tagmata are typically composed of professional soldiers, and are considered the most elite and well-trained troops in the  army. They are also among the best-paid soldiers in the empire."
 
+ remove_noble_privileges_decision: "Abolish Noble Privileges"
+ remove_noble_privileges_decision_desc: "Curb the unchecked power of the aristocracy by abolishing their excessive privileges, laying the foundation for a fairer and more centralized society."
 
- remove_noble_privileges_decision: "Abolish Excessive Noble Privileges"
- remove_noble_privileges_decision_desc: "Reform the power of the nobility by abolishing excessive privileges, ensuring a more equitable society."
  vive_la_revolution_decision: "Vive la Revolution"
  vive_la_revolution_decision_desc: "The French Revolution was a period of radical political and societal change in France that began with the Estates General and ended with the formation of the French Consulate and finally leading to the The First French Empire, Napoleonic France, was the empire ruled by Napoleon Bonaparte, who established French hegemony over much of continental Europe."
 
- armenian_decision: "Accept Armenians"
- armenian_decision_desc: "Armenians have proven themselves as loyal subjects of Basileia Romaion, it's time we give them the same rights as Romaíoi."
- azerbaijani_decision: "Accept Azerbaijani"
- azerbaijani_decision_desc: "Azerbaijani have proven themselves as loyal subjects of Persia, it's time we give them the same rights as Persians."
- mashriqi_decision: "Accept Mashriqi"
- mashriqi_decision_desc: "Mashriqi have proven themselves as loyal subjects of Persia, it's time we give them the same rights as Persians."
- accept_english_decision: "Accept English"
- accept_english_decision_desc: "It's time we accept the English and give them the same rights as Danes."
- accept_anglo_dane_decision: "Accept Anglo-Dane"
- accept_anglo_dane_decision_desc: "It's time we accept the Anglo-Dane and give them the same rights as Danes."
- accept_baltic_german_decision: "Accept Baltic"
- accept_baltic_german_decision_desc: "It's time we accept the Baltic and give them the same rights as Primary Cultures."
+ armenian_decision: "Integrate the Armenians"
+ armenian_decision_desc: "The Armenians have long served the Basileía Rōmaíōn with loyalty and distinction. It is time we recognize them as equals and grant them the rights of full citizens"
+ azerbaijani_decision: "Integrate the Turko-Persians"
+ azerbaijani_decision_desc: "The Turko-Persians have shown loyalty to the Persian realm. Let us formalize their place in our society by granting them equal rights as Persians."
+ mashriqi_decision: "Integrate the Mashriqi"
+ mashriqi_decision_desc: "The Mashriqi have faithfully served our administration. It is time to honor their dedication by granting them the same status as native-born Persians."
+ accept_english_decision: "Integrate the English"
+ accept_english_decision_desc: "The time has come to welcome the English as equals, extending to them the full rights enjoyed by our Danish citizens."
+ accept_anglo_dane_decision: "Integrate the Anglo-Danes"
+ accept_anglo_dane_decision_desc: "The Anglo-Danes are our kin in blood and culture. Let us end any remaining barriers and embrace them as full members of the Danish nation."
+ accept_baltic_german_decision: "Integrate the Baltic Germans"
+ accept_baltic_german_decision_desc: "The Baltic Germans have long been a part of our domain. It is time we recognize them as equals and grant them the rights of our primary cultures."
 
- br_end_slavic_oppression_decision: "Abolish the Oppression of the Balkan Slavs"
- br_end_slavic_oppression_decision_desc: "Take a bold step toward justice by ending the systematic oppression of the Balkan Slavs, promoting equality and unity within our realm."
+
+ br_end_slavic_oppression_decision: "End the Oppression of the Balkan Slavs"
+ br_end_slavic_oppression_decision_desc: "For too long, the Balkan Slavs have lived under a system of injustice. We must break with the past and forge a future of unity, dignity, and shared citizenship."
  br_end_muslim_oppression_decision: "End the Oppression of Our Muslim Subjects"
  br_end_muslim_oppression_decision_desc: "Erase the injustices faced by our Muslim subjects and establish a fairer, more inclusive society for all people under our rule."
 
@@ -105,17 +106,20 @@
  remove_cossacks: "Revoke Cossack Autonomy"
  remove_cossacks_desc: "For years, the Cossacks have enjoyed local autonomy, but this arrangement no longer serves our central interests. It is time to consolidate control and integrate them fully into the state."
 
- chariot_racing_decision: "State-Sponsored Chariot Racing Revival"
- chariot_racing_decision_desc: "Chariot racing is one of the most ancient and revered traditions of the Mediterranean world. By reviving this iconic sport, we can restore the grandeur of Romaion athleticism and reconnect with a legacy that stretches back to the heart of our empire’s past."
- expand_chariot_racing_decision: "Expand the Chariot Racing Circuit"
- expand_chariot_racing_decision_desc: "As the excitement surrounding chariot racing grows throughout the empire, there is increasing demand to expand the sport by reintroducing the six original teams of the Roman Empire. This will not only fuel public enthusiasm but also honor our historic athletic traditions."
+ chariot_racing_decision: "Revive State-Sponsored Chariot Racing"
+ chariot_racing_decision_desc: "Once the heartbeat of the Hippodrome and a symbol of imperial unity, chariot racing captivated the Rōmaíōn spirit for centuries. Its revival shall be a triumph of culture, heritage, and imperial pride."
+ expand_chariot_racing_decision: "Expand the Imperial Racing Circuit"
+ expand_chariot_racing_decision_desc: "With public fervor reignited, it is time to broaden the spectacle. By reintroducing the six original racing factions of the old empire, we restore the full grandeur of this time-honored sport and deepen its place in our cultural revival."
 
- br_mandate_heaven_decision: "Claim the Mandate of Heaven"
- br_mandate_heaven_decision_desc: "With our unchallenged control over China, it is time to assert our rightful claim to the Mandate of Heaven, solidifying our rule and divine legitimacy."
- br_remove_china_political_turmoil_decision: "Grant Peasant Freedoms"
- br_remove_china_political_turmoil_decision_desc: "The time has come to address the grievances of the peasants. By granting them political and economic freedoms, we can restore stability and foster loyalty among the common people."
+ br_mandate_heaven_decision: "Proclaim the Mandate of Heaven"
+ br_mandate_heaven_decision_desc: "With our unrivaled dominion over Zhongguo, the time has come to assert our divine right to rule. By claiming the Mandate of Heaven, we sanctify our authority and usher in a new era of celestial harmony under our reign."
+
+ br_remove_china_political_turmoil_decision: "Address Peasant Grievances"
+ br_remove_china_political_turmoil_decision_desc: "Turmoil brews when the cries of the common people go unheard. By granting political and economic freedoms to the peasantry, we can ease unrest, restore harmony, and win the loyalty of those who till the land."
+
  br_remove_china_rampant_corruption_decision: "Eradicate Corruption"
- br_remove_china_rampant_corruption_decision_desc: "Corruption has plagued our empire for too long. It is time to root out this malignant force and restore integrity and trust to our government."
+ br_remove_china_rampant_corruption_decision_desc: "Let it be known: the days of unchecked corruption are over. The empire shall be purged of dishonor, and the righteous shall rise to restore virtue in governance."
+
  br_remove_insufficient_infrastructure_decision: "Modernize Outdated Infrastructure"
  br_remove_insufficient_infrastructure_decision_desc: "Our infrastructure is outdated and hindering progress. It is time to invest in modernization projects to strengthen our economy and improve the daily lives of our people."
 
@@ -135,18 +139,16 @@
  ere_romania_name_decision: "Latinize Name: 'Romania'"
  ere_romania_name_decision_desc: "Sometimes used, especially in poetic or legal contexts, to refer to Roman lands. It is also used to refer to the Roman Empire in a more general sense, as opposed to the Eastern Roman Empire. The term 'Romania' is derived from the Latin word 'Romanus', which means 'of Rome' or 'Roman'. It is used to refer to the lands that were once part of the Roman Empire, including parts of modern-day Italy, France, Spain, Portugal, and Romania."
  ere_romania_name_decision_custom_tooltip: "We should use our Latin name 'Romania'."
-
  ere_rhomania_i_name_decision: "Full Formal Transliteration: Basileía tōn Rhōmaíōn"
  ere_rhomania_i_name_decision_desc: "The difference between Rhōmaíōn and Romaíon is due to transliteration conventions. The initial Ῥ (Rho with rough breathing) was historically pronounced with an aspirated "R" sound, which some transliterations preserve as "Rh" (Rhōmaíōn). Others drop the aspiration, resulting in "Romaíon". While medieval Greek speakers did not write an "H," Rhōmaíōn better reflects historical pronunciation, whereas Romaíon is a simpler modern transliteration."
  ere_rhomania_i_name_decision_custom_tooltip: "We should use our formal transliteration: Basileía tōn Rhōmaíōn"
-
  ere_rhomania_ii_name_decision: "Transliteration: Rhōmanía"
  ere_rhomania_ii_name_decision_desc: "The initial Ῥ (Rho with rough breathing) was historically pronounced with an aspirated "R" sound, which some transliterations preserve as "Rh" (Rhōmanía). Others drop the aspiration, resulting in "Romanía". While medieval Greek speakers did not write an "H," Rhōmanía better reflects historical pronunciation, whereas Romanía is a simpler modern transliteration."
  ere_rhomania_ii_name_decision_custom_tooltip: "We should use our pronounced transliteration: Rhōmanía"
  
  #Government Decisions
  abolish_feudalism_decision: "Abolish the Feudal System"
- abolish_feudalism_decision_desc: "Take a decisive step toward modernity by formally abolishing the feudal system, breaking the chains of medieval governance and establishing a more centralized, equitable society."
+ abolish_feudalism_decision_desc: "For centuries, the people have labored under the yoke of feudal lords. Now, we cast off those chains and build a new order—one of equality, justice, and progress."
 
  #AI Only decisions --- These are to boost AI countries and only target other AI countries
  br_byz_easy_agy: "AI Start Scripted War"
